Moved hardcoded strings to docusaurus config. Fixed overflow hidden on hero example.

--- a/website/components/LandingPage/index.module.css
+++ b/website/components/LandingPage/index.module.css
@@ -86,7 +86,7 @@
   --ifm-hero-background-color: var(--dark-blue-grey);
 }
 
-.landing :global .hero {
+.landing .overflow-hidden {
   overflow: hidden;
 }
 
@@ -418,11 +418,6 @@
 .whyus {
   --ifm-hero-background-color: var(--dusk-blue) !important;
   color: black;
-}
-
-.whouses {
-  background-color: var(--dark-blue-grey);
-  padding-bottom: 0 !important;
 }
 
 .oval {
